--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,7 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .footer-socials-link:hover,
